Fixed Header alignment issue.

--- a/css/style.css
+++ b/css/style.css
@@ -790,7 +790,7 @@ textarea {
 }
 
 .center{
-    width:500px;
+    width:520px;
     margin: 0 auto;
     text-align: center;
 }
